reduced h1 size to prevent overflow

--- a/less/index.less
+++ b/less/index.less
@@ -155,6 +155,9 @@ body {
 :root {
 	font-size: @mobilefontsize;
 }
+section {
+	margin-bottom: 10px;
+}
 .container {
 	flex-flow: column;
 	margin: 0 auto;
@@ -239,7 +242,7 @@ a {
 		color: white;
 	}
 	h1 {
-		font-size: 35px;
+		font-size: 30px;
 		margin-bottom: @h123margin;
 	}
 	h2 {
@@ -266,6 +269,10 @@ a {
 	}
 }
 
+h1 {
+	font-size: 25px;
+	text-align: center;
+}
 .middle-content {
 	padding: 0 10px;
 	div:last-child {
@@ -276,14 +283,12 @@ a {
 	div > * {
 		margin-bottom: 20px;
 	}
-	h1 {
-		font-size: 25px;
-		text-align: center;
-	}
+
 	.line-center {
 		margin: 0;
 		background: rgb(194, 192, 192);
 		display: inline-block;
+		padding: 0 10px;
 	}
 	li {
 		text-align: center;
@@ -299,4 +304,7 @@ a {
 		border-top: solid 1px blue;
 		z-index: -1;
 	}
+}
+.bottom-content {
+	padding: 0 10px;
 }
